--- a/GfE-BMS/Makefile
+++ b/GfE-BMS/Makefile
@@ -7,9 +7,19 @@ schematic-scan.png: schematic-scan-1.png schematic-scan-2.png
 	\( schematic-scan-2.png -rotate 180 -geometry +4464-4 \) -composite \
 	$@
 
-clean:
-	rm -f schematic-scan.png
+# potrace works better with a scaled down image
+schematic-scan.pgm: schematic-scan.png
+	magick $< -scale 30% $@
 
-open: schematic-scan.png
+schematic-scan.svg: schematic-scan.pgm
+	potrace -a 0 $< -b svg -o $@
+
+clean:
+	rm -f \
+	schematic-scan.png \
+	schematic-scan.pgm \
+	schematic-scan.svg
+
+open: schematic-scan.svg
 	open $^
 
