GfE-BMS: replace scans with ones of a better quality print

--- a/GfE-BMS/Makefile
+++ b/GfE-BMS/Makefile
@@ -2,9 +2,9 @@ all: schematic.svg
 
 schematic-scan.png: schematic-scan-1.png schematic-scan-2.png
 	magick \
-	-size 9320x6285 xc:black \
-	\( schematic-scan-1.png -rotate -0.3 -geometry +0-20 \) -composite \
-	\( schematic-scan-2.png -rotate 180 -geometry +4464-4 \) -composite \
+	-size 9750x6600 xc:black \
+	\( schematic-scan-2.png -rotate 179.8 -shave 10x10 +repage -geometry +4842-71 \) -composite \
+	\( schematic-scan-1.png -rotate -0.07 -shave 10x10 +repage -geometry +0-40 \) -composite \
 	$@
 
 # potrace works better with a scaled down image
