GfE-BMS: stop potracing the schematic scan
It turns out to be bigger than the scan:

```
GfE-BMS $ make schematic-scan.svg
magick schematic-scan.png -scale 30% schematic-scan.pgm
potrace -a 0 schematic-scan.pgm -b svg -o schematic-scan.svg
GfE-BMS $ ls -l schematic-scan.png schematic-scan.svg
-rw-r--r--@ 1 Filip.Zyzniewski  staff  485924 Mar  8 09:51 schematic-scan.png
-rw-r--r--  1 Filip.Zyzniewski  staff  584377 Mar  8 10:23 schematic-scan.svg
GfE-BMS $
```

--- a/GfE-BMS/Makefile
+++ b/GfE-BMS/Makefile
@@ -1,4 +1,4 @@
-all: schematic.svg
+all: schematic-scan.png
 
 schematic-scan.png: schematic-scan-1.png schematic-scan-2.png
 	magick \
@@ -8,19 +8,5 @@ schematic-scan.png: schematic-scan-1.png schematic-scan-2.png
 	-monochrome \
 	$@
 
-# potrace works better with a scaled down image
-schematic-scan.pgm: schematic-scan.png
-	magick $< -scale 30% $@
-
-schematic-scan.svg: schematic-scan.pgm
-	potrace -a 0 $< -b svg -o $@
-
 clean:
-	rm -f \
-	schematic-scan.png \
-	schematic-scan.pgm \
-	schematic-scan.svg
-
-open: schematic-scan.svg
-	open $^
-
+	rm -f schematic-scan.png
