GfE-BMS: schematic => connection-schematic
To make room for the board schematic

--- a/GfE-BMS/Makefile
+++ b/GfE-BMS/Makefile
@@ -1,12 +1,12 @@
-all: schematic-scan.png
+all: connection-schematic-scan.png
 
-schematic-scan.png: schematic-scan-1.png schematic-scan-2.png
+connection-schematic-scan.png: connection-schematic-scan-1.png connection-schematic-scan-2.png
 	magick \
 	-size 9750x6600 xc:black \
-	\( schematic-scan-2.png -rotate 179.8 -shave 10x10 +repage -geometry +4842-71 \) -composite \
-	\( schematic-scan-1.png -rotate -0.07 -shave 10x10 +repage -geometry +0-40 \) -composite \
+	\( connection-schematic-scan-2.png -rotate 179.8 -shave 10x10 +repage -geometry +4842-71 \) -composite \
+	\( connection-schematic-scan-1.png -rotate -0.07 -shave 10x10 +repage -geometry +0-40 \) -composite \
 	-monochrome \
 	$@
 
 clean:
-	rm -f schematic-scan.png
+	rm -f connection-schematic-scan.png
