tools: add svg_embed_images.py
And use it in the Makefiles

This is to work around requests blocked by content security policy at
https://raw.githubusercontent.com/filip-zyzniewski/city-el/2b3569e/GfE-BMS/connection-schematic-english-colors-declared.svg
for example.

--- a/DCDC-CityCom-80501HF/Makefile
+++ b/DCDC-CityCom-80501HF/Makefile
@@ -1,7 +1,12 @@
-all: schematic.svg
+ALL = schematic.svg pcb-components-embedded.svg
+
+all: $(ALL)
 
 schematic.svg: schematic.kicad_sch
 	kicad-cli sch export svg $<
 
+%-embedded.svg: %.svg
+	../tools/svg_embed_images.py $< > $@
+
 clean:
-	rm -f schematic.svg
+	rm -f $(ALL)
