--- a/GfE-BMS/Makefile
+++ b/GfE-BMS/Makefile
@@ -1,4 +1,6 @@
-all: board-schematic.svg connection-schematic-scan.png
+ALL = board-schematic.svg connection-schematic-english-colors-declared-embedded.svg connection-schematic-german-colors-declared-embedded.svg
+
+all: $(ALL)
 
 board-schematic.svg: board-schematic.kicad_sch
 	kicad-cli sch export svg $<
@@ -11,7 +13,8 @@ connection-schematic-scan.png: connection-schematic-scan-1.png connection-schema
 	-monochrome \
 	$@
 
+%-embedded.svg: %.svg
+	../tools/svg_embed_images.py $< > $@
+
 clean:
-	rm -f \
-	board-schematic.svg \
-	connection-schematic-scan.png
+	rm -f $(ALL)
