Revert "tools: add svg_embed_images.py"
This reverts commit cdbc7480d60f8a5b87ab9b6f5e7cb7fb999a23fc.

--- a/DCDC-CityCom-80501HF/Makefile
+++ b/DCDC-CityCom-80501HF/Makefile
@@ -1,12 +1,7 @@
-ALL = schematic.svg pcb-components-embedded.svg
-
-all: $(ALL)
+all: schematic.svg
 
 schematic.svg: schematic.kicad_sch
 	kicad-cli sch export svg $<
 
-%-embedded.svg: %.svg
-	../tools/svg_embed_images.py $< > $@
-
 clean:
-	rm -f $(ALL)
+	rm -f schematic.svg
