--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -1,6 +1,7 @@
 name: GitHub Pages deployment
 
 on:
+  pull_request:
   push:
     branches:
       - main
@@ -16,17 +17,48 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-
-      - name: Build the pages
-        uses: ./.github/actions/build-pages
-        with:
-          source: ./
-          destination: ./_site
-
-      - name: Setup Pages
+      - name: Configure pages
+        id: configure
         uses: actions/configure-pages@v5
+
+      - name: Verify that the base pages deployment is up to date
+        if: github.event_name == 'pull_request'
+        shell: bash
+        run: |
+            GOT="$(curl -s "${{ steps.configure.outputs.base_url}}/build-revision.txt")"
+            WANT="${{ github.event.pull_request.base.sha }}"
+            if [[ "$GOT" = "$WANT" ]]
+            then
+              echo "We are good, base is $WANT and it is the deployed revision"
+            else
+              echo "Aborting, as we would deploy $WANT on top of $GOT"
+              exit 1
+            fi
+
+      - name: Checkout the main branch
+        uses: actions/checkout@v6
+        with:
+            path: base
+            ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.ref || github.ref }}
+
+      - name: Build the base pages
+        uses: ./base/.github/actions/build-pages
+        with:
+          source: base
+          destination: _site
+
+      - name: Checkout
+        if: github.event_name == 'pull_request'
+        uses: actions/checkout@v6
+        with:
+          path: pr
+
+      - name: Build the PR pages
+        if: github.event_name == 'pull_request'
+        uses: ./pr/.github/actions/build-pages
+        with:
+          source: pr
+          destination: _site/pr-preview/${{ github.event.pull_request.number }}
 
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v4
@@ -34,7 +66,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}${{ github.event_name == 'pull_request' && format('/pr-preview/{0}', github.event.pull_request.number) || '' }}
     runs-on: ubuntu-latest
     needs: build
     permissions:
