Render KiCad schematics using the KiCad docker image
So that rendering is less platform dependant.

--- a/GfE-BMS/Makefile
+++ b/GfE-BMS/Makefile
@@ -1,7 +1,16 @@
 all: board-schematic.svg connection-schematic-scan.png
 
 board-schematic.svg: board-schematic.kicad_sch
-	kicad-cli sch export svg $<
+	docker run \
+		--rm \
+		--interactive \
+		ghcr.io/kicad/kicad:9.0.6 \
+		sh -c ' \
+			cd ~ && \
+			cat > $< && \
+			kicad-cli sch export svg $< 1>&2 && \
+			cat $@ \
+		' < $< > $@
 
 clean:
 	rm -f board-schematic.svg
