--- a/DCDC-CityCom-80501HF/Makefile
+++ b/DCDC-CityCom-80501HF/Makefile
@@ -1,7 +1,16 @@
 all: schematic.svg
 
 schematic.svg: schematic.kicad_sch
-	kicad-cli sch export svg $<
+	docker run \
+		--rm \
+		--interactive \
+		ghcr.io/kicad/kicad:9.0.6 \
+		sh -c ' \
+			cd ~ && \
+			cat > $< && \
+			kicad-cli sch export svg $< 1>&2 && \
+			cat $@ \
+		' < $< > $@
 
 clean:
 	rm -f schematic.svg
