Render GitHub pages with relative links
Missed in
https://github.com/filip-zyzniewski/city-el/pull/2

Concept from
https://github.com/jekyll/jekyll/issues/332#issuecomment-18952908

Before:

```console
filip@dell1:~$ curl -sL https://filip-zyzniewski.github.io/city-el/pr-preview/3/DCDC-CityCom-80501HF | htmlq --attribute href a | grep svg
/city-el/DCDC-CityCom-80501HF/schematic.svg
/city-el/DCDC-CityCom-80501HF/pcb-components.svg
filip@dell1:~$
```

After:

```console
filip@dell1:~$ curl -sL https://filip-zyzniewski.github.io/city-el/pr-preview/3/DCDC-CityCom-80501HF | htmlq --attribute href a | grep svg
/city-el/pr-preview/3/DCDC-CityCom-80501HF/schematic.svg
/city-el/pr-preview/3/DCDC-CityCom-80501HF/pcb-components.svg
filip@dell1:~$
```

--- a/.github/actions/build-pages/action.yml
+++ b/.github/actions/build-pages/action.yml
@@ -24,8 +24,11 @@ runs:
         make -C ${{ inputs.source }}
         exec >> "$GITHUB_OUTPUT"
         echo -n revision=
+        set -o noclobber
         git -C ${{ inputs.source }} rev-parse HEAD |
         tee ${{ inputs.source }}/build-revision.txt
+        DESTINATION="${{ inputs.destination }}"
+        echo "baseurl: 'city-el/${DESTINATION#*/}'" > ${{ inputs.source }}/_config.yml
 
     - name: Build Jekyll for GitHub Pages
       uses: actions/jekyll-build-pages@v1
