--- a/mechanics/drive-axle/model/pyproject.toml
+++ b/mechanics/drive-axle/model/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "Filip Zyzniewski", email = "filip.zyzniewski@gmail.com" }
 ]
 requires-python = ">=3.13.11"
-dependencies = []
+dependencies = [
+    "cadquery>=2.6.1",
+]
 
 [build-system]
 requires = ["uv_build>=0.9.17,<0.10.0"]
