--- a/mechanics/drive-axle/model/pyproject.toml
+++ b/mechanics/drive-axle/model/pyproject.toml
@@ -9,8 +9,12 @@ authors = [
 requires-python = ">=3.13.11"
 dependencies = [
     "cadquery>=2.6.1",
+    "cq-warehouse",
 ]
 
 [build-system]
 requires = ["uv_build>=0.9.17,<0.10.0"]
 build-backend = "uv_build"
+
+[tool.uv.sources]
+cq-warehouse = { git = "https://github.com/gumyr/cq_warehouse.git" }
