mechanics: drive axle: model: uv add ruff
Per https://docs.astral.sh/ruff/installation/#installing-ruff

```console
filip@dell1:~/git/github.com/filip-zyzniewski/city-el/mechanics/drive-axle/model$ uv add --dev ruff
Resolved 34 packages in 447ms
      Built cityel-drive-axle-model @ file:///home/filip/git/github.com/filip-zyzniewski/city-el/mechanics/drive-axle/model
Prepared 1 package in 4ms
Uninstalled 1 package in 0.37ms
Installed 2 packages in 1ms
 ~ cityel-drive-axle-model==0.1.0 (from file:///home/filip/git/github.com/filip-zyzniewski/city-el/mechanics/drive-axle/model)
 + ruff==0.14.9
filip@dell1:~/git/github.com/filip-zyzniewski/city-el/mechanics/drive-axle/model$
```

--- a/mechanics/drive-axle/model/pyproject.toml
+++ b/mechanics/drive-axle/model/pyproject.toml
@@ -18,3 +18,8 @@ build-backend = "uv_build"
 
 [tool.uv.sources]
 cq-warehouse = { git = "https://github.com/gumyr/cq_warehouse.git" }
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.9",
+]
