mechanics: drive axle: model: uv add CQ-editor
Per https://github.com/CadQuery/CQ-editor/wiki/Installation#installation-pip

```console
filip@dell1:~/git/github.com/filip-zyzniewski/city-el/mechanics/drive-axle/model$ uv add --dev CQ-editor
Resolved 190 packages in 1.26s
      Built cityel-drive-axle-model @ file:///home/filip/git/github.com/filip-zyzniewski/city-el/mechanics/drive-axle/model
Prepared 1 package in 4ms
Uninstalled 1 package in 0.35ms
Installed 146 packages in 108ms
 + alabaster==1.0.0
 + arrow==1.4.0
 + astroid==3.3.11
 + asttokens==3.0.1
 + atomicwrites==1.4.1
 + autopep8==2.0.4
 + babel==2.17.0
 + beautifulsoup4==4.14.3
 + binaryornot==0.4.4
 + black==25.12.0
 + bleach==6.3.0
 + certifi==2025.11.12
 + cffi==2.0.0
 + chardet==5.2.0
 + charset-normalizer==3.4.4
 ~ cityel-drive-axle-model==0.1.0 (from file:///home/filip/git/github.com/filip-zyzniewski/city-el/mechanics/drive-axle/model)
 + click==8.3.1
 + cloudpickle==3.1.2
 + colorama==0.4.6
 + comm==0.2.3
 + cookiecutter==2.6.0
 + cq-editor==0.5.0
 + cryptography==46.0.3
 + debugpy==1.8.18
 + decorator==5.2.1
 + defusedxml==0.7.1
 + diff-match-patch==20241021
 + dill==0.4.0
 + docstring-to-markdown==0.17
 + docutils==0.22.3
 + executing==2.2.1
 + fastjsonschema==2.21.2
 + flake8==7.1.2
 + imagesize==1.4.1
 + importlib-metadata==8.7.0
 + inflection==0.5.1
 + intervaltree==3.1.0
 + ipykernel==6.31.0
 + ipython==8.37.0
 + isort==6.1.0
 + jaraco-classes==3.4.0
 + jaraco-context==6.0.1
 + jaraco-functools==4.3.0
 + jedi==0.19.2
 + jeepney==0.9.0
 + jellyfish==1.2.1
 + jinja2==3.1.6
 + jsonschema==4.25.1
 + jsonschema-specifications==2025.9.1
 + jupyter-client==8.7.0
 + jupyter-core==5.9.1
 + jupyterlab-pygments==0.3.0
 + keyring==25.7.0
 + logbook==1.9.2
 + markdown-it-py==4.0.0
 + markupsafe==3.0.3
 + matplotlib-inline==0.2.1
 + mccabe==0.7.0
 + mdurl==0.1.2
 + mistune==3.1.4
 + mypy-extensions==1.1.0
 + nbclient==0.10.2
 + nbconvert==7.16.6
 + nbformat==5.10.4
 + nest-asyncio==1.6.0
 + numpydoc==1.10.0

--- a/mechanics/drive-axle/model/pyproject.toml
+++ b/mechanics/drive-axle/model/pyproject.toml
@@ -21,5 +21,6 @@ cq-warehouse = { git = "https://github.com/gumyr/cq_warehouse.git" }
 
 [dependency-groups]
 dev = [
+    "cq-editor>=0.5.0",
     "ruff>=0.14.9",
 ]
