--- a/mechanics/drive-axle/model/pyproject.toml
+++ b/mechanics/drive-axle/model/pyproject.toml
@@ -19,6 +19,22 @@ build-backend = "uv_build"
 [project.scripts]
 edit = "cityel_drive_axle_model._edit:run"
 
+[tool.ruff.lint]
+# https://docs.astral.sh/ruff/rules
+select = [
+    "ANN",  # flake8-annotations
+    "B",  # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "D",  # pydocstyle
+    "F",  # Pyflakes
+    "I",  # isort
+    "PL",  # Pylint
+    "SIM",  # flake8-simplify
+    "Q",  # flake8-quotes
+    "U",  # pyupgrade
+    "W",  # pycodestyle
+]
+
 [tool.uv.sources]
 cq-warehouse = { git = "https://github.com/gumyr/cq_warehouse.git" }
 
